dynamic_block/main.tf
provider "aws" {
  region = "us-east-2"
}

variable "sg_ports" {
  type        = list(number)
  description = "List of Ingress Ports"
  default     = [8200, 8201, 8300, 9200, 9500]
}

resource "aws_security_group" "dynamic_sg" {
  name        = "mydynamic_sg"
  description = "Ingress for Vault"

  dynamic "ingress" {
    for_each = var.sg_ports
    content {
      from_port   = ingress.value
      to_port     = ingress.value
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }
}
